cfn.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  PHONEBOOK with python using cloud formation
Parameters:
  MyVPC:
    Description: Choose your VPC
    Type: AWS::EC2::VPC::Id

  MySubnets:
    Description: Choose at least 2 subnets
    Type: List<AWS::EC2::Subnet::Id>

  EnvType:
    Description: Choose your env type
    Type: String
    Default: prod
    AllowedValues:
      - prod
      - test

  MyKeyPair:
    Description: Choose your own key pair
    Type: AWS::EC2::KeyPair::KeyName

  MyInstanceType:
    Description: Choose your instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.nano
      - t3.micro

Mappings:
  RegionImageMap:
    us-east-1:
      prod: ami-03a6eaae9938c858c
      test: ami-098143f68772b34f5
    us-east-2:
      prod: ami-0d406e26e5ad4de53
      test: ami-0dbb0f9887f1fe98f
    us-west-1:
      prod: ami-0062dbf6b829f04e1
      test: ami-04669a22aad391419

Resources:
  MyDBInstance:
    Type: "AWS::RDS::DBInstance"
    Properties:
      AllocatedStorage: "20"
      DBInstanceIdentifier: "clarusway_phonebook"
      DBInstanceClass: "db.t2.micro"
      Engine: "mysql"
      EngineVersion: "8.0.28"
      MasterUsername: "admin"
      MasterUserPassword: "clarusway_1234"
      PubliclyAccessible: false

  MyScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref MyASG # Required
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 60.0
  MyASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: yalcincfn
      DesiredCapacity: 2
      HealthCheckGracePeriod: 90
      HealthCheckType: ELB
      LaunchTemplate:
        LaunchTemplateId: !Ref MyLT
        Version: !GetAtt MyLT.DefaultVersionNumber
      MaxSize: 3 # Required
      MinSize: 1 # Required
      TargetGroupARNs:
        - !GetAtt MyTargetGrp.TargetGroupArn # !Ref MyTargetGrp
      VPCZoneIdentifier: !Ref MySubnets # not array

  MyListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions: # Required
        - TargetGroupArn: !GetAtt MyTargetGrp.TargetGroupArn # !Ref MyTargetGrp
          Type: forward
      LoadBalancerArn: !Ref MyELB # Required
      Port: 80
      Protocol: HTTP

  MyELB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: yalcincfn
      SecurityGroups:
        - !Ref MySecGrp #!GetAtt MySecGrp.GroupId
      Subnets: !Ref MySubnets
      Type: application

  MyLT:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !FindInMap
          - RegionImageMap
          - !Ref "AWS::Region"
          - !Ref EnvType
        InstanceType: !Ref MyInstanceType
        KeyName: !Ref MyKeyPair
        SecurityGroupIds:
          - !GetAtt MySecGrp.GroupId # !Ref MySecGrp
        UserData: !Base64 |
          #!/bin/bash
          yum update -y
          yum install python3 -y
          yum install python3-pip -y
          pip3 install flask
          yum install git -y
          cd /home/ec2-user
          wget -P templates https://raw.githubusercontent.com/abdullahyalcin/Phonebook-Application-CloudFormation/main/templates/add-update.html
          wget -P templates https://raw.githubusercontent.com/abdullahyalcin/Phonebook-Application-CloudFormation/main/templates/delete.html
          wget -P templates https://raw.githubusercontent.com/abdullahyalcin/Phonebook-Application-CloudFormation/main/templates/index.html
          wget https://raw.githubusercontent.com/abdullahyalcin/Phonebook-Application-CloudFormation/main/phonebook-app.py
          wget https://raw.githubusercontent.com/abdullahyalcin/Phonebook-Application-CloudFormation/main/003_phonebook.png
          wget https://raw.githubusercontent.com/abdullahyalcin/Phonebook-Application-CloudFormation/main/search-snapshot.png
          python3 phonebook-app.py
      LaunchTemplateName: Web Server of StackName

  MyTargetGrp:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      IpAddressType: ipv4
      Name: yalcincfn
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId: !Ref MyVPC

  MySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ssh and http of asgalb # Required
      GroupName: yalcincfn
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      VpcId: !Ref MyVPC

Outputs:
  DNSofELB:
    Description: Gives DNS of ELB
    Value: !Join
      - ""
      - - "http://"
        - !GetAtt MyELB.DNSName
  RDSEndpoint:
    Value: !GetAtt MyDBInstance.Endpoint.Address
